# dumb-bell

./: .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
.github/workflows/: main.yml
backend/: main.py
backend/alembic/: env.py
backend/alembic/versions/: 44609c146223_init.py  528d228a45bf_update_users_table.py  af6653aa6bfd_add_users_table.py
backend/core/: db.py  security.py  settings.py
backend/crud/: users.py
backend/models/: users.py
backend/routers/: auth.py
backend/schemas/: users.py
